# Change Log
All notable changes to this project will be documented in this file.

## [3.1.3] - 2017-05-22
# Fixed
- Log traceback of unknown errors

## [3.1.2] - 2017-05-09
# Fixed
- Fix default branch prefix in settings

## [3.1.1] - 2017-05-04
# Added
- Bert-E adds a link to the commit URL in the message posted for a failed build
- Bert-E's REST API was bootstrapped
- REST API 'rebuild_queues' command
- JIRA checks can be bypassed according to the source branch prefix (e.g. "documentation")
- Bert-E can send exceptions to Sentry
# Fixed
- Bert-E no longer crashes silently when encountering an unknown issue type

## [3.1.0] - 2017-04-21
# Changed
- No longer create integration branch/pull request for the first destination branch
- Lossy resets are detected in a cleaner and more reliable way
# Added
- BertE can block when a pull request diverges too much from its destination branch

## [3.0.11] - 2017-04-14
# Fixed
- Random options were showed as active in the robot's greetings message.
- Don't display "wrong destination branch" message in case of a failed git ls-remote
- Commit link points to the build in the robot's completed job queue.
- Prevent from putting duplicate jobs in the task queue
- Ignore suffixed versions (such as "5.1.9_hf3") in JIRA fixVersion field

## [3.0.10] - 2017-03-27
# Added
- better scm version support in setup.py and version display in status page

## [3.0.9] - 2017-03-23
# Added
- Fallback to two 2-way merge in case of conflict during 3-way octopus merge
# Fixed
- Bert-E does not crash when an argument is given to the status command in pull requets

## [3.0.8] - 2017-03-16
# Added
- Bert-E supports GitHub (except for tasks, author approvals and unanimity option)
- Comment.delete() is specified in the abstract githost API + the github implementation
- need_author_approval optional configuration key (defaulting to true)
# Changed
- Pull request author is optional during filtered scans, with sensible default values

## [3.0.7] - 2017-03-08